# KapexAI

./: .env.example  .gitignore  LICENSE  README.md  README_SERVER.md  example.py  pyproject.toml  requirements.txt  server_requirements.txt
Frontend/: package-lock.json  package.json  run.cmd
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/app/scenario/: page.tsx
Frontend/src/components/: ChatWorkspace.module.css  ChatWorkspace.tsx  ScenarioWorkbench.tsx
Frontend/src/lib/: api.ts  chat.ts  scenario.ts
examples/: run_demo.py
experimental/: README.md
kapexai/: __init__.py  __main__.py  cli.py  env_loader.py  main.py  prompts.py  workers.py
kapexai/tools/: __init__.py  analysis.py  artifact_tools.py  astrology_tools.py  charts.py  consulting.py  debt_calculators.py  debt_management_calculators.py  economics.py  equity_calculators.py  finance_calculators.py  finance_tools.py  foresight.py  indian_finance_calculators.py  langchain_agents.py  legal_tools.py  macroeconomics_calculators.py  microeconomics_calculators.py  personal_finance_calculators.py  presentation.py  real_estate_calculators.py  registry.py  research.py  retirement_calculators.py  runtime.py  sales_calculators.py  tax_salary_calculators.py
src/: __init__.py  ppt_generator.py
src/agents/: langchain_agents.py  pure_python_agents.py
